Different Functions in ArrayList